# chview

./: .dockerignore  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  db.py  demo_data.py  demo_traffic.py  docker-compose.yml  lineage.py  pyproject.toml  requirements.txt  ui_components.py
.github/workflows/: ci.yml
demo/: data.py  setup.sql  traffic.py
src/chview/: __init__.py  __main__.py  app.py  cli.py
src/chview/components/: __init__.py  alerts.py  charts.py  sidebar.py  styles.py  tables.py
src/chview/core/: __init__.py  formatters.py  models.py
src/chview/db/: __init__.py  client.py  queries.py  repository.py
src/chview/lineage/: __init__.py  graph.py  layout.py  parser.py  renderer.py
src/chview/pages/: __init__.py  lineage.py  metrics.py  overview.py  tables.py
tests/: conftest.py
tests/unit/: test_formatters.py  test_graph.py  test_layout.py  test_parser.py  test_queries.py
